--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/ProfileFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.albumsapp.presentation.profileScreen.ProfileFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/ProfileFragment"
+        android:name="com.example.albumsapp.presentation.profile.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_profile">
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_ProfileFragment_to_AlbumDetailsFragment"
+            app:destination="@id/AlbumDetailsFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.albumsapp.presentation.albumDetailsScreen.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+        android:id="@+id/AlbumDetailsFragment"
+        android:name="com.example.albumsapp.presentation.albumDetails.AlbumDetailsFragment"
+        android:label="Album Details"
+        tools:layout="@layout/fragment_album_details"/>
 </navigation>
